--- a/staschuk_html/HTML/index.html
+++ b/staschuk_html/HTML/index.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-lg-6 mx-auto">
           <img src="Unknown.jpg" alt="it's a cat" />
-          <h1>cat</h1>
+          <h1 class="fw-light">cat</h1>
           <p>prosto cat</p>
           <button>like!</button>
         </div>
